# simply

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml
cmake/: pre-commit.cmake  simply.cmake
include/simply/: concepts.hpp  copyable.hpp  destructible.hpp  dispatch.hpp  dyn.hpp  elide.hpp  extractable.hpp  identifiable.hpp  iface.hpp  impl.hpp  insertable.hpp  invocable.hpp  movable.hpp  scope.hpp  simply.hpp  storage.hpp  type_traits.hpp  vtable.hpp
tests/: CMakeLists.txt  concepts.cpp  counters.cpp  stream.cpp
